# langdoc

./: .env.example  .gitignore  README.md  README.md.old  cli.py  docgen.py  embedding.py  parser.py  pyproject.toml  requirements.txt  setup.py  utils.py
.langdoc/vector_store/: chroma.sqlite3
cli/: __init__.py  context.py  main.py  utils.py
cli/commands/: __init__.py  ask_cmd.py  doc_cmd.py  parse_cmd.py  readme_cmd.py
langdoc/: cli.py
langdoc/cli/: context.py  main.py  utils.py
langdoc/cli/commands/: ask_cmd.py  doc_cmd.py  readme_cmd.py
langdoc/core/: __init__.py  docgen.py  embedding.py
src/langdoc/: __init__.py  cli.py  exceptions.py
src/langdoc/application/: __init__.py  codebase_analysis_service.py  documentation_generator_service.py  services.py
src/langdoc/cli/: __init__.py  __main__.py  app.py  base_command.py  commands.py  context.py  generate_readme_command.py  index_codebase_command.py
src/langdoc/cli/commands/: __init__.py  ask_cmd.py  doc_cmd.py  parse_cmd.py  readme_cmd.py
src/langdoc/core/: docgen.py  embedding.py  parser.py  protocols.py
src/langdoc/core/generators/: __init__.py  ask.py  doc.py  readme.py
src/langdoc/core/services/: embedding_service.py  readme_service.py
src/langdoc/domain/: __init__.py  interfaces.py  models.py
src/langdoc/infrastructure/: __init__.py
src/langdoc/infrastructure/embeddings/: __init__.py  code_vector_store.py  document_processor.py  vector_store.py
src/langdoc/infrastructure/filesystem/: __init__.py  filesystem_service.py
src/langdoc/infrastructure/git/: git_service.py
src/langdoc/infrastructure/llm/: __init__.py  base_llm_service.py  llm_service.py  readme_generator_service.py
src/langdoc/utils/: __init__.py  common.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_codebase_analysis.py  test_document_generation.py
